syntax = "proto3";

// Brought in from scalapb-runtime
import "scalapb/scalapb.proto";

package com.evernym.verity.actor.agent.msgrouter;

message StatusUpdated {
    option (scalapb.message).extends = "com.evernym.verity.actor.ActorMessageClass";
    string agentRouteStoreEntityId= 1;
    int32 totalRoutes = 2;
    int32 processedRoutes = 3;
}

message ActorStateCleaned {
    option (scalapb.message).extends = "com.evernym.verity.actor.ActorMessageClass";
    string actorId = 1;
}