syntax = "proto3";

// Brought in from scalapb-runtime
import "scalapb/scalapb.proto";

package com.evernym.verity.protocol.protocols.writeCredentialDefinition.v_0_6;

message RequestReceived {
    option (scalapb.message).extends = "Event";
    string name = 1;
    string schemaId = 2;
}


message AskedForEndorsement {
    option (scalapb.message).extends = "Event";
    string credDefId = 1;
    string credDefJson = 2;
}

message CredDefWritten {
    option (scalapb.message).extends = "Event";
    string credDefId = 1;
}

message WriteFailed {
    option (scalapb.message).extends = "Event";
    string error = 1;
}
